# projective-dynamics-for-robotics

./: .dockerignore  .gitignore  Dockerfile  README.md
models/: robot_simple.gltf
src/pd_sim/: CMakeLists.txt  package.xml
src/pd_sim/include/pd_sim/: loader.hpp  visualizer.hpp
src/pd_sim/launch/: pd_sim_launch.py
src/pd_sim/src/: loader.cpp  main.cpp  trackball.cpp  visualizer.cpp
src/pd_sim/src/shaders/: base.vert
